# ART

./: .gitignore  AUTHORS.txt  AboutThisBuild.txt.in  CMakeLists.txt  README.md  UpdateInfo.cmake
.github/workflows/: linux_arm64.yml  linux_x64.yml  macos.yml  mirror.yml  source.yml  windows.yml  windows_arm64.yml  windows_x64.yml
doc/manpage/: ART.1
rtdata/: ART.desktop.in  CMakeLists.txt  cammatrices.json  wbpresets.json
rtdata/ctlscripts/: _artlib.ctl  hueeq.ctl  lumeq.ctl  wbchmix.ctl
rtdata/dcpprofiles/: CANON EOS-1D X MARK III.dcp  FUJIFILM GFX 100.dcp  OLYMPUS E-M5.dcp  PENTAX K-5 II.dcp  PENTAX K-50.dcp  camera_model_aliases.json
rtdata/iccprofiles/output/: RTv2_sRGB.icc  RTv4_ACES-AP0.icc  RTv4_DisplayP3.icc  RTv4_Large.icc  RTv4_Linear_Rec709.icc  RTv4_Medium.icc  RTv4_Rec2020.icc  RTv4_sRGB.icc
rtdata/languages/: Catala  Deutsch  Espanol  Francais  Italiano  Japanese  Korean  Magyar  Nederlands  Portugues (Brasil)  default
rtdata/luts/: sigmoid.ctl
rtdata/options/: options.osx
rtdata/profiles/: Auto-Matched Curve.arp  Simple Film Curve.arp  Standard Film Curve.arp
rtdata/themes/: ART-GTK3-20_.css  Dark-GTK3-20_.css  Default - Dark-GTK3-20_.css  Default - Light-GTK3-20_.css  Default-GTK3-20_.css  Light-GTK3-20_.css  Orange - Dark-GTK3-20_.css  Orange-GTK3-20_.css  OrangeDark-GTK3-20_.css  RawTherapee-GTK3-20_.css  RawTherapee-GTK3-_19.css  TooWaBlue - Bright-GTK3-20_-DEPRECATED.css  TooWaBlue - Bright-GTK3-20_.css  TooWaBlue - Dark-GTK3-20_-DEPRECATED.css  TooWaBlue - Dark-GTK3-20_.css  TooWaBlue-GTK3-20_.css  TooWaGrey - Average Surround-GTK3-20_.css  TooWaGrey - Bright-GTK3-20_.css  TooWaGrey - Dark-GTK3-20_.css  TooWaGrey-GTK3-20_.css  _ART-GTK3-20_.css  _ART-GTK3-_19.css  _ART.css  _default.css
rtengine/: CA_correct_RT.cc  CMakeLists.txt  FTblockDN.cc  StopWatch.h  alignedbuffer.h  array2D.h  ashift_dt.c  badpixels.cc  base64.h  cache.h  camconst.cc  camconst.h  camconst.json  canon_cr3_decoder.cc  cfa_linedn_RT.cc  clutparams.cc  clutparams.h  clutstore.cc  clutstore.h  clutstore.hpp  color.cc  color.h  colortemp.cc  colortemp.h  compress.cc  compress.h  coord.cc  coord.h  cplx_wavelet_level.h  curves.cc  curves.h  dcp.cc  dcp.h  dcraw.cc  dcraw.h  dcrop.cc  dcrop.h  demosaic_algos.cc  dfmanager.cc  diagonalcurves.cc  (+110 more)
rtengine/klt/: klt_util.cc  writeFeatures.cc
rtgui/: CMakeLists.txt  adjuster.cc  adjuster.h  areamask.cc  areamask.h  batchqueue.cc  batchqueue.h  batchqueueentry.cc  batchqueueentry.h  batchqueuepanel.cc  batchqueuepanel.h  bayerpreprocess.cc  bayerpreprocess.h  bayerprocess.cc  bayerrawexposure.cc  blackwhite.cc  blackwhite.h  bqentryupdater.cc  bqentryupdater.h  browserfilter.h  cacheimagedata.cc  cacheimagedata.h  cachemanager.cc  cachemanager.h  chmixer.cc  chmixer.h  clipboard.h  clutparamspanel.cc  clutparamspanel.h  colorcorrection.cc  colorcorrection.h  coloredbar.cc  colorwheel.cc  colorwheel.h  config.h.in  controllines.cc  controllines.h  crop.cc  crop.h  crophandler.cc  (+183 more)
tools/: build-art  generateReleaseInfo  generateSourceTarball  make_dcp.py
tools/extlut/: ART_agx_film.json  agx_emulsion_mklut.py
tools/linux/: bundle_ART.py
tools/osx/: ART.icns  Info.plist.in  art.icns  artdmg.icns  bundle_ART.py  gdk-window-quartz-colorspace.patch  macosx_bundle.sh
tools/win/: bundle_ART.py  imageio_driver.py  imageio_driver.spec
tools/win/InnoSetup/: WindowsInnoSetup.iss.in
